...
                        _Page(page: widget.pages[index]),
                  ),
                ),
                Padding(
                  padding: const EdgeInsets.all(24),
                  child: PrimaryButton(
                    label: state.isLastPage ? 'Get started' : 'Next',
                    onPressed: () => context.read<OnboardingBloc>().add(
                      const OnboardingAdvanced(),
                    ),
                  ),
                ),
              ],
...
